--- a/packages/cavlidemo/app/src/main/res/values-night/themes.xml
+++ b/packages/cavlidemo/app/src/main/res/values-night/themes.xml
@@ -1,9 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Cavlidemo" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Customize your dark theme here. -->
+        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
-
-    <style name="Theme.Cavlidemo" parent="Base.Theme.Cavlidemo" />
 </resources>
